# googleapis

./: .bazelignore  .bazeliskrc  .bazelrc  .gitallowed  .gitignore  .gitmodules  Apigoogle.md  BUILD  BUILD.bazel  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GPS.nuber.tell  MODULE.bazel  Makefile  PACKAGES.md  README.md  SECURITY.md  SEMATIC_README.md  WORKSPACE  WORKSPACE.bzlmod  _config.yml  aSmilejustforYou.m4a  api-index-v1.json  artman-batch.py  build.gradle.java  compute.bcd.findings.annotated.txt  compute.ibv.desc  compute.og.desc  detected_breaking_changes.json  extensions.bzl  generator-versions.json  git clone README.md  github_ISSUE_TEMPLATE_feature_request.yml  google.protobuf.BUILD  index.html  index.md  load_json.bzl  lts_config.bzl  package_deps.yml  (+8 more)
.bcr/template/: MODULE.template.bazel  presubmit.yml  source.template.json
.bcr/template/overlay/: extensions.bzl
.bcr/template/patches/: module_dot_bazel.patch  remove_upb_c_rules.patch
google/actions/type/: BUILD.bazel  date_range.proto  datetime_range.proto  type_aog.yaml
google/ai/generativelanguage/: BUILD.bazel
google/api/: BUILD  BUILD.bazel  README.md  annotations.proto  annotations_pb2.py  auth.proto  backend.proto  billing.proto  client.proto  config_change.proto  consumer.proto  context.proto  control.proto  distribution.proto  documentation.proto  endpoint.proto  error_reason.proto  field_behavior.proto  field_info.proto  http.proto  http_pb2.py  httpbody.proto  label.proto  launch_stage.proto  log.proto  logging.proto  metadata.proto  metric.proto  monitored_resource.proto  monitoring.proto  policy.proto  quota.proto  resource.proto  resources.proto  retry.proto  routing.proto  service.proto  serviceconfig.yaml  signature.proto  source_info.proto  (+3 more)
google/api/apikeys/: BUILD.bazel
google/api/cloudquotas/: BUILD.bazel
google/api/experimental/: BUILD.bazel  authorization_config.proto  client.proto  experimental.proto  headers.proto  lro.proto  metadata.proto  overload.proto  param_list.proto  project.proto  resources.proto  retry.proto  signature.proto  stability.proto
google/api/expr/: artman_cel.yaml  cel.yaml
google/api/servicecontrol/: BUILD.bazel  README.md
google/api/servicemanagement/: BUILD.bazel  artman_servicemanagement_v1.yaml
google/api/serviceusage/: BUILD.bazel
google/bigtable/v2/: BUILD.bazel  bigtable.proto  bigtable_gapic.legacy.yaml  bigtable_gapic.yaml  bigtable_grpc_service_config.json  bigtable_v2.yaml  data.proto  feature_flags.proto  peer_info.proto  request_stats.proto  response_params.proto  session.proto  types.proto
google/bytestream/: BUILD.bazel  bytestream.proto
google/cloud/: BUILD.bazel  common_resources.proto  extended_operations.proto
google/cloud/accessapproval/: BUILD.bazel
google/cloud/advisorynotifications/: BUILD.bazel
google/cloud/agentidentity/: BUILD.bazel
google/cloud/agentidentitycredentials/: BUILD.bazel
google/cloud/agentregistry/: BUILD.bazel
google/cloud/aiplatform/: BUILD.bazel
google/cloud/alloydb/: BUILD.bazel
google/cloud/apigateway/: BUILD.bazel
google/cloud/apigeeconnect/: BUILD.bazel
google/cloud/apigeeregistry/: BUILD.bazel
google/cloud/apihub/: BUILD.bazel
google/cloud/apiregistry/: BUILD.bazel
google/cloud/apphub/: BUILD.bazel
google/cloud/appoptimize/: BUILD.bazel
google/cloud/asset/: BUILD.bazel  artman_cloudasset_v1.yaml  artman_cloudasset_v1beta1.yaml  artman_cloudasset_v1p2beta1.yaml  asset_v1beta1.yaml
google/cloud/assuredworkloads/: BUILD.bazel
google/cloud/audit/: BUILD.bazel  audit_log.proto  bigquery_audit_metadata.proto  cloudaudit.yaml
google/cloud/auditmanager/: BUILD.bazel
google/cloud/automl/: BUILD.bazel  artman_automl_v1beta1.yaml  automl_v1.yaml  automl_v1beta1.yaml
google/cloud/backupdr/: BUILD.bazel
google/cloud/baremetalsolution/: BUILD.bazel
google/cloud/batch/: BUILD.bazel
google/cloud/billing/: BUILD.bazel
google/cloud/binaryauthorization/: BUILD.bazel
google/cloud/capacityplanner/: BUILD.bazel
google/cloud/certificatemanager/: BUILD.bazel
google/cloud/ces/: BUILD.bazel
google/cloud/channel/: BUILD.bazel
google/cloud/chronicle/: BUILD.bazel
google/cloud/cloudcontrolspartner/: BUILD.bazel
google/cloud/clouddms/: BUILD.bazel
google/cloud/cloudsecuritycompliance/: BUILD.bazel
google/cloud/commerceproducer/: BUILD.bazel
google/cloud/common/: BUILD.bazel  common.yaml  operation_metadata.proto
google/cloud/compute/: BUILD.bazel
google/cloud/confidentialcomputing/: BUILD.bazel
google/cloud/config/: BUILD.bazel
google/cloud/configdelivery/: BUILD.bazel
google/cloud/connectors/: BUILD.bazel
google/cloud/contactcenterinsights/: BUILD.bazel
google/cloud/contentwarehouse/: BUILD.bazel
google/cloud/databasecenter/: BUILD.bazel
google/cloud/datacatalog/: BUILD.bazel  artman_datacatalog_v1beta1.yaml  datacatalog_v1beta1.yaml
google/cloud/dataform/: BUILD.bazel
google/cloud/datafusion/: BUILD.bazel
google/cloud/datahub/: datahub.yaml
google/cloud/datalabeling/: BUILD.bazel  artman_datalabeling_v1beta1.yaml
google/cloud/dataplex/: BUILD.bazel
google/cloud/dataproc/: BUILD.bazel  artman_dataproc_v1.yaml  artman_dataproc_v1beta2.yaml  dataproc.yaml
google/cloud/dataqna/: BUILD.bazel
google/cloud/datastream/: BUILD.bazel
google/cloud/deploy/: BUILD.bazel
google/cloud/developerconnect/: BUILD.bazel
google/cloud/devicestreaming/: BUILD.bazel
google/cloud/dialogflow/: BUILD.bazel  artman_dialogflow_v2.yaml  artman_dialogflow_v2beta1.yaml  (+5 more)
google/longrunning/: BUILD.bazel  README.md  artman_longrunning.yaml  longrunning.yaml  longrunning_gapic.yaml  longrunning_grpc_service_config.json  operations.proto
google/rpc/: BUILD  BUILD.bazel  README.md  code.proto  error_details.proto  rpc_publish.yaml  status.proto
google/type/: BUILD.bazel  README.md  calendar_period.proto  color.proto  date.proto  datetime.proto  dayofweek.proto  expr.proto  interval.proto  latlng.proto  localized_text.proto  money.proto  month.proto  phone_number.proto  postal_address.proto  quaternion.proto  timeofday.proto  type.yaml
(+69812 files in other folders)
