module(
    name = "googleapis",
    version = "{GOOGLEAPIS_VERSION}",
    repo_name = "com_google_googleapis",
    bazel_compatibility = [">=7.2.1"],
)

# Only needed for well-known protos.
bazel_dep(name = "protobuf", version = "{PROTOBUF_VERSION}", repo_name = "com_google_protobuf")

# Only needed for proto_library.
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")

bazel_dep(name = "googleapis-rules-registry", version = "1.0.0")

rules_registry = use_extension("@googleapis-rules-registry//private/extensions:rules_registry.bzl", "rules_registry")
use_repo(
    rules_registry,
    "com_google_googleapis_imports",
    "io_bazel_rules_go",
)
