# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

##############################################################################
# Common
##############################################################################
proto_library(
    name = "api_proto",
    srcs = [
        "annotations.proto",
        "auth.proto",
        "backend.proto",
        "billing.proto",
        "config_change.proto",
        "consumer.proto",
        "context.proto",
        "control.proto",
        "distribution.proto",
        "documentation.proto",
        "endpoint.proto",
        "http.proto",
        "httpbody.proto",
        "label.proto",
        "launch_stage.proto",
        "log.proto",
        "logging.proto",
        "metric.proto",
        "monitored_resource.proto",
        "monitoring.proto",
        "quota.proto",
        "source_info.proto",
        "system_parameter.proto",
        "usage.proto",
    ],
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:api_proto",
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:type_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

proto_library(
    name = "service_proto",
    srcs = ["service.proto"],
    deps = [
        ":api_proto",
        "//google/api/experimental:experimental_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:api_proto",
        "@com_google_protobuf//:type_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

##############################################################################
# Java
##############################################################################
java_proto_library(
    name = "api_java_proto",
    deps = [":api_proto"],
)
