load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility=["//visibility:public"])

proto_library(
    name="bytestream_proto",
    srcs=[
        "bytestream.proto",
    ],
    deps = [
        "//google/api:annotations_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)
