load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

##############################################################################
# Common
##############################################################################
load("@com_google_api_codegen//rules_gapic:gapic.bzl", "proto_library_with_info")

proto_library(
    name = "operations_proto",
    srcs = ["operations.proto"],
    deps = [
        "//google/api:annotations_proto",
        "//google/rpc:status_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

proto_library_with_info(
    name = "longrunning_proto_with_info",
    deps = [":operations_proto"],
)

##############################################################################
# Java
##############################################################################
java_proto_library(
    name = "longrunning_java_proto",
    deps = [":operations_proto"],
)

java_grpc_library(
    name = "longrunning_java_grpc",
    srcs = [":operations_proto"],
    deps = [":longrunning_java_proto"],
)

##############################################################################
# Go
##############################################################################
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@com_google_api_codegen//rules_gapic/go:go_gapic.bzl", "go_gapic_srcjar", "go_gapic_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@com_google_api_codegen//rules_gapic/go:go_gapic_pkg.bzl", "go_gapic_assembly_pkg")

go_proto_library(
    name = "longrunning_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "google.golang.org/genproto/googleapis/longrunning",
    protos = [":longrunning_proto_with_info"],
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:annotations_go_proto",
        "//google/rpc:status_go_proto",
    ],
)

go_gapic_library(
    name = "longrunning_go_gapic",
    src = ":longrunning_proto_with_info",
    gapic_yaml = "longrunning_gapic.yaml",
    importpath = "cloud.google.com/go/longrunning/autogen",
    service_yaml = "//google/longrunning:longrunning.yaml",
    deps = [":longrunning_go_proto"],
)

go_test(
    name = "longrunning_go_gapic_test",
    srcs = [":longrunning_go_gapic_srcjar_test"],
    embed = [":longrunning_go_gapic"],
    importpath = "cloud.google.com/go/longrunning/autogen",
)

# Opensource Packages
go_gapic_assembly_pkg(
    name = "gapi-cloud-longrunning-go",
    deps = [
        ":longrunning_go_gapic",
        ":longrunning_go_gapic_srcjar-smoke-test.srcjar",
        ":longrunning_go_gapic_srcjar-test.srcjar",
        ":longrunning_go_proto",
    ],
)
