load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

##############################################################################
# Common
##############################################################################
proto_library(
    name = "rpc_proto",
    srcs = [
        "code.proto",
        "error_details.proto",
        "status.proto",
    ],
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
    ],
)

##############################################################################
# Java
##############################################################################
java_proto_library(
    name = "rpc_java_proto",
    deps = [":rpc_proto"],
)

java_grpc_library(
    name = "rpc_java_grpc",
    srcs = [":rpc_proto"],
    deps = [":rpc_java_proto"],
)
