# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

##############################################################################
# Common
##############################################################################
proto_library(
    name = "color_proto",
    srcs = ["color.proto"],
    deps = [
        "@com_google_protobuf//:wrappers_proto",
    ],
)

proto_library(
    name = "date_proto",
    srcs = ["date.proto"],
)

proto_library(
    name = "dayofweek_proto",
    srcs = ["dayofweek.proto"],
)

proto_library(
    name = "latlng_proto",
    srcs = ["latlng.proto"],
)

proto_library(
    name = "money_proto",
    srcs = ["money.proto"],
)

proto_library(
    name = "postal_address_proto",
    srcs = ["postal_address.proto"],
)

proto_library(
    name = "timeofday_proto",
    srcs = ["timeofday.proto"],
)

##############################################################################
# Java
##############################################################################
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

java_proto_library(
    name = "type_java_proto",
    deps = [
        ":color_proto",
        ":date_proto",
        ":dayofweek_proto",
        ":latlng_proto",
        ":money_proto",
        ":postal_address_proto",
        ":timeofday_proto",
    ],
)

##############################################################################
# Go
##############################################################################
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
    name = "color_go_proto",
    importpath = "google.golang.org/genproto/googleapis/type/color",
    protos = [":color_proto"],
)

go_proto_library(
    name = "date_go_proto",
    importpath = "google.golang.org/genproto/googleapis/type/date",
    protos = [":date_proto"],
)

go_proto_library(
    name = "dayofweek_go_proto",
    importpath = "google.golang.org/genproto/googleapis/type/dayofweek",
    protos = [":dayofweek_proto"],
)

go_proto_library(
    name = "latlng_go_proto",
    importpath = "google.golang.org/genproto/googleapis/type/latlng",
    protos = [":latlng_proto"],
)

go_proto_library(
    name = "money_go_proto",
    importpath = "google.golang.org/genproto/googleapis/type/money",
    protos = [":money_proto"],
)

go_proto_library(
    name = "postaladdress_go_proto",
    importpath = "google.golang.org/genproto/googleapis/type/postaladdress",
    protos = [":postal_address_proto"],
)

go_proto_library(
    name = "timeofday_go_proto",
    importpath = "google.golang.org/genproto/googleapis/type/timeofday",
    protos = [":timeofday_proto"],
)
